Complete the whole photo part, album, photo wall, photo detail, move, zoom, etc

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="plus_take_photo">拍照分享</string>
 
     <string name="nav_back">返回</string>
+    <string name="homepage">主页</string>
 </resources>
